<resources>
    <string name="app_name">Music Player</string>
    <string name="album">Album</string>
    <string name="playlist">Playlist</string>
    <string name="songs">Songs</string>
    <string name="store">Store</string>
    <string name="this_is_home_screen">Home</string>
    <string name="this_is_song_activity">Song Activity</string>
    <string name="this_layout_fill_show_all_songs">This Layout will show all songs .</string>
    <string name="song_1">Song 1</string>
    <string name="song_2">Song 2</string>
    <string name="song_3">Song 3</string>
    <string name="song_4">Song 4</string>
    <string name="song_5">Song 5</string>
    <string name="this_is_playlist_actitvity">Playlist Activity</string>
    <string name="this_will_show_only_those_song_whicj_are_in_playlist">This will show only those song which are in Playlist</string>
    <string name="this_is_album_activity">Album Activity</string>
    <string name="album_1">Album 1</string>
    <string name="this_will_show_song_from_particular_album">This will show Song from Particular Album</string>
    <string name="this_is_store_activity">Store Activity</string>
    <string name="first_add_dependencies_dependencies_compile_com_paypal_sdk_paypal_android_sdk_2_15_3">First add Dependencies : </string>
    <string name="to_purchase_any_song_from_internet">To Purchase any Song From Internet</string>
    <string name="we_can_use_external_api_to_connect">We can use External API to connect .</string>
    <string name="album_activity">Album Activity</string>
    <string name="payment_activity">Payment Activity</string>
    <string name="playlist_activity">Playlist Activity</string>
    <string name="song_class">Songs</string>
    <string name="playlist_class">Playlist</string>
    <string name="album_class">Album</string>
    <string name="store_class">Store</string>
    <string name="dependencies_compile_com_paypal_sdk_paypal_android_sdk_2_15_3">dependencies {compile(\'com.paypal.sdk:paypal-android-sdk:2.15.3\') }</string>
    <string name="this_activity_display_home_screen_of_the_music_app">This Activity display Home Screen of the Music App</string>
    <string name="home_screen">Home Screen</string>
    <string name="_playlist">Playlist</string>
    <string name="home">Home</string>
    <string name="playlist_1">Playlist</string>
    <string name="_store">Store</string>
</resources>
