<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPink"
            android:orientation="horizontal">

            <Button
                android:id="@+id/to_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPink"
                android:gravity="center"
                android:text="@string/home" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorPink"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/this_is_song_activity"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/to_playlist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPink"
                android:text="@string/_playlist" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/this_layout_fill_show_all_songs"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextView1"
            android:paddingTop="10dp"
            android:text="@string/song_1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextView2"
            android:paddingTop="10dp"
            android:text="@string/song_2"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextView3"
            android:paddingTop="10dp"
            android:text="@string/song_3"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextView4"
            android:paddingTop="10dp"
            android:text="@string/song_4"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextView5"
            android:paddingTop="10dp"
            android:text="@string/song_5"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>