<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAqua"
        android:orientation="horizontal">

        <Button
            android:id="@+id/to_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAqua"
            android:text="@string/playlist_1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorAqua"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/this_is_album_activity"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/to_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAqua"
            android:text="@string/_store" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/this_will_show_song_from_particular_album"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextView2"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:text="@string/album_1"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextView3"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:text="@string/song_2"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextView4"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:text="@string/song_4"
        android:textSize="15sp" />

</LinearLayout>