<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPurple"
        android:orientation="horizontal">

        <Button
            android:id="@+id/to_song"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPurple"
            android:text="@string/songs" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorPurple"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/this_is_playlist_actitvity"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/to_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPurple"
            android:text="@string/album" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/this_will_show_only_those_song_whicj_are_in_playlist"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextView2"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:text="@string/song_2"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextView5"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:text="@string/song_5"
        android:textSize="20sp" />
</LinearLayout>